--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -8,7 +8,7 @@
 //** Padding between columns. Gets divided in half for the left and right.
 @grid-gutter-width:         0px;
 
-@font-size-base:          16px;
+@font-size-base:            16px;
 // @line-height-base:        1.78571428571; // 25/14
 
 @container-large-desktop:      (960px + @grid-gutter-width);
@@ -24,7 +24,7 @@
 @import "../../bower_components/bootstrap/less/glyphicons.less";
 
 // Core CSS
-@import "../../bower_components/bootstrap/less/scaffolding.less";
+//@import "../../bower_components/bootstrap/less/scaffolding.less";
 @import "../../bower_components/bootstrap/less/type.less";
 @import "../../bower_components/bootstrap/less/code.less";
 @import "../../bower_components/bootstrap/less/grid.less";
